--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,7 +94,7 @@ main {
 
 .footer {
     padding: 1rem 2rem;
-    transition: background-color 0.5s ease, color 0.5s ease;
+    transition:  color 0.5s ease;
     background-color: white;
     border-radius: 0 0 10px 10px;
     min-height: 72px;
